Mejora de detalles x3

--- a/App_LUMINOVA/templates/admin/roles_permisos.html
+++ b/App_LUMINOVA/templates/admin/roles_permisos.html
@@ -45,10 +45,10 @@
                     </button>
                 </td>
                 <td>
-                    <button class="btn btn-sm btn-info btn-editar-rol" data-rol-id="{{ rol.id }}">
+                    <button class="btn btn-sm btn-outline-info btn-editar-rol" data-rol-id="{{ rol.id }}">
                         <i class="bi bi-pencil-fill"></i>
                     </button>
-                    <button class="btn btn-sm btn-danger btn-eliminar-rol" data-rol-id="{{ rol.id }}" data-rol-name="{{ rol.name|capfirst }}">
+                    <button class="btn btn-sm btn-outline-danger btn-eliminar-rol" data-rol-id="{{ rol.id }}" data-rol-name="{{ rol.name|capfirst }}">
                         <i class="bi bi-trash-fill"></i>
                     </button>
                 </td>
