--- a/App_LUMINOVA/templates/compras/compras_lista_oc.html
+++ b/App_LUMINOVA/templates/compras/compras_lista_oc.html
@@ -12,7 +12,7 @@
 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
     <h1 class="text center">{{ titulo_seccion }}</h1>
     <div class="btn-toolbar mb-2 mb-md-0">
-        <a href="#" class="btn btn-primary">
+        <a href="#" class="btn btn-success">
             <i class="bi bi-plus-circle"></i> Nueva Órden de Compra
         </a>
     </div>
