--- a/App_LUMINOVA/templates/deposito/insumo_confirm_delete.html
+++ b/App_LUMINOVA/templates/deposito/insumo_confirm_delete.html
@@ -10,7 +10,7 @@
             <ul class="nav flex-column">
                 <li class="nav-item">
                     <a class="nav-link text-white fw-bold custom-active-button d-flex align-items-center" href="{% url 'App_LUMINOVA:insumo_create' %}?categoria={{ categoria_I.id }}">
-                        <i class="bi bi-plus-square-fill me-2"></i> <span class="ms-2">Agregar Insumo</span>
+                        <i class="bi bi-plus-square me-2"></i> <span class="ms-2">Agregar Insumo</span>
                     </a>
                 </li>
                  <li class="nav-item mt-2">
