--- a/App_LUMINOVA/templates/ventas/ventas_clientes.html
+++ b/App_LUMINOVA/templates/ventas/ventas_clientes.html
@@ -13,7 +13,7 @@
     <h1 class="h2">{{ titulo_seccion|default:"Gestión de Clientes" }}</h1>
     <div class="btn-toolbar mb-2 mb-md-0">
         <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#crearClienteModal">
-            <i class="bi bi-person-plus-fill"></i> Nuevo Cliente
+            <i class="bi bi-plus-circle"></i> Nuevo Cliente
         </button>
     </div>
 </div>
