--- a/App_LUMINOVA/templates/deposito/categoria_insumo_crear.html
+++ b/App_LUMINOVA/templates/deposito/categoria_insumo_crear.html
@@ -12,17 +12,17 @@
             <ul class="nav flex-column">
                 <li class="nav-item">
                     <a class="nav-link text-white fw-bold custom-active-button d-flex align-items-center" href="{% url 'App_LUMINOVA:insumo_create' %}">
-                        <i class="bi bi-plus-square-fill me-2"></i> <span class="ms-2">Agregar Insumo</span>
+                        <i class="bi bi-plus-square me-2"></i> <span class="ms-2">Agregar Insumo</span>
+                    </a>
+                </li>
+                <li class="nav-item mt-2">
+                    <a class="nav-link text-white fw-bold custom-active-button d-flex align-items-center active" href="{% url 'App_LUMINOVA:categoria_i_create' %}">
+                        <i class="bi bi-bookmark-plus me-2"></i> <span class="ms-2">Agregar Categoría Insumo</span>
                     </a>
                 </li>
                 <li class="nav-item mt-2">
                     <a class="nav-link text-white fw-bold custom-active-button d-flex align-items-center" href="{% url 'App_LUMINOVA:producto_terminado_create' %}">
                         <i class="bi bi-plus-square-fill me-2"></i> <span class="ms-2">Agregar Producto Terminado</span>
-                    </a>
-                </li>
-                <li class="nav-item mt-2">
-                    <a class="nav-link text-white fw-bold custom-active-button d-flex align-items-center active" href="{% url 'App_LUMINOVA:categoria_i_create' %}">
-                        <i class="bi bi-bookmark-plus-fill me-2"></i> <span class="ms-2">Agregar Categoría Insumo</span>
                     </a>
                 </li>
                 <li class="nav-item mt-2">
