--- a/App_LUMINOVA/templates/deposito/categoria_producto_terminado_editar.html
+++ b/App_LUMINOVA/templates/deposito/categoria_producto_terminado_editar.html
@@ -12,7 +12,7 @@
             <ul class="nav flex-column">
                 <li class="nav-item">
                     <a class="nav-link text-white fw-bold custom-active-button d-flex align-items-center" href="{% url 'App_LUMINOVA:producto_terminado_create' %}?categoria={{ categoria.id }}">
-                        <i class="bi bi-plus-square-fill me-2"></i> <span class="ms-2">Agregar Prod. Terminado</span>
+                        <i class="bi bi-plus-square me-2"></i> <span class="ms-2">Agregar Prod. Terminado</span>
                     </a>
                 </li>
                 <li class="nav-item mt-2">
