--- a/App_LUMINOVA/templates/deposito/deposito_sidebar.html
+++ b/App_LUMINOVA/templates/deposito/deposito_sidebar.html
@@ -25,17 +25,17 @@
             </li>
             <li class="nav-item mt-2">
                 <a class="nav-link text-white fw-bold custom-active-button d-flex align-items-center {% if request.path == url_insumo_create %}active{% endif %}" href="{{ url_insumo_create }}">
-                    <i class="bi bi-plus-square-fill me-2"></i> <span class="ms-2">Agregar Insumo</span>
+                    <i class="bi bi-plus-square me-2"></i> <span class="ms-2">Agregar Insumo</span>
+                </a>
+            </li>
+            <li class="nav-item mt-2">
+                <a class="nav-link text-white fw-bold custom-active-button d-flex align-items-center {% if request.path == url_cat_i_create %}active{% endif %}" href="{{ url_cat_i_create }}">
+                    <i class="bi bi-bookmark-plus me-2"></i> <span class="ms-2">Agregar Cat. Insumo</span>
                 </a>
             </li>
             <li class="nav-item mt-2">
                 <a class="nav-link text-white fw-bold custom-active-button d-flex align-items-center {% if request.path == url_pt_create %}active{% endif %}" href="{{ url_pt_create }}">
                     <i class="bi bi-plus-square-fill me-2"></i> <span class="ms-2">Agregar Prod. Term.</span>
-                </a>
-            </li>
-             <li class="nav-item mt-2">
-                <a class="nav-link text-white fw-bold custom-active-button d-flex align-items-center {% if request.path == url_cat_i_create %}active{% endif %}" href="{{ url_cat_i_create }}">
-                    <i class="bi bi-bookmark-plus-fill me-2"></i> <span class="ms-2">Agregar Cat. Insumo</span>
                 </a>
             </li>
             <li class="nav-item mt-2">
