--- a/App_LUMINOVA/templates/deposito/insumo_crear.html
+++ b/App_LUMINOVA/templates/deposito/insumo_crear.html
@@ -12,17 +12,17 @@
             <ul class="nav flex-column">
                 <li class="nav-item">
                     <a class="nav-link text-white fw-bold custom-active-button d-flex align-items-center active" href="{% url 'App_LUMINOVA:insumo_create' %}">
-                        <i class="bi bi-plus-square-fill me-2"></i> <span class="ms-2">Agregar Insumo</span>
+                        <i class="bi bi-plus-square me-2"></i> <span class="ms-2">Agregar Insumo</span>
+                    </a>
+                </li>
+                <li class="nav-item mt-2">
+                    <a class="nav-link text-white fw-bold custom-active-button d-flex align-items-center" href="{% url 'App_LUMINOVA:categoria_i_create' %}">
+                        <i class="bi bi-bookmark-plus me-2"></i> <span class="ms-2">Agregar Categoría Insumo</span>
                     </a>
                 </li>
                 <li class="nav-item mt-2">
                     <a class="nav-link text-white fw-bold custom-active-button d-flex align-items-center" href="{% url 'App_LUMINOVA:producto_terminado_create' %}">
                         <i class="bi bi-plus-square-fill me-2"></i> <span class="ms-2">Agregar Producto Terminado</span>
-                    </a>
-                </li>
-                <li class="nav-item mt-2">
-                    <a class="nav-link text-white fw-bold custom-active-button d-flex align-items-center" href="{% url 'App_LUMINOVA:categoria_i_create' %}">
-                        <i class="bi bi-bookmark-plus-fill me-2"></i> <span class="ms-2">Agregar Categoría Insumo</span>
                     </a>
                 </li>
                 <li class="nav-item mt-2">
@@ -74,24 +74,12 @@
                 {% if form.proveedor.errors %}<div class="invalid-feedback d-block">{{ form.proveedor.errors }}</div>{% endif %}
             </div>
         </div>
-
-        <div class="row">
-            <div class="col-md-4 mb-3">
-                <label for="{{ form.precio_unitario.id_for_label }}" class="form-label">{{ form.precio_unitario.label }}</label>
-                {{ form.precio_unitario }}
-                {% if form.precio_unitario.errors %}<div class="invalid-feedback d-block">{{ form.precio_unitario.errors }}</div>{% endif %}
-            </div>
-            <div class="col-md-4 mb-3">
-                <label for="{{ form.tiempo_entrega.id_for_label }}" class="form-label">{{ form.tiempo_entrega.label }}</label>
-                {{ form.tiempo_entrega }}
-                {% if form.tiempo_entrega.errors %}<div class="invalid-feedback d-block">{{ form.tiempo_entrega.errors }}</div>{% endif %}
-            </div>
-            <div class="col-md-4 mb-3">
-                <label for="{{ form.stock.id_for_label }}" class="form-label">{{ form.stock.label }}</label>
-                {{ form.stock }}
-                {% if form.stock.errors %}<div class="invalid-feedback d-block">{{ form.stock.errors }}</div>{% endif %}
-            </div>
+        <div class="col-md-4 mb-3">
+            <label for="{{ form.stock.id_for_label }}" class="form-label">{{ form.stock.label }}</label>
+            {{ form.stock }}
+            {% if form.stock.errors %}<div class="invalid-feedback d-block">{{ form.stock.errors }}</div>{% endif %}
         </div>
+
 
         <div class="mb-3">
             <label for="{{ form.imagen.id_for_label }}" class="form-label">{{ form.imagen.label }}</label>
