--- a/App_LUMINOVA/templates/shared/header.html
+++ b/App_LUMINOVA/templates/shared/header.html
@@ -2,9 +2,9 @@
 <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm p-0">
         <div class="container-fluid d-flex align-items-center">
-            <div class="col-md-3 col-lg-2">
+            <div class="col-md-3 col-lg-1">
                 <a class="navbar-brand d-flex align-items-center ms-3" href="{% url 'App_LUMINOVA:dashboard' %}">
-                    <img src="{% static 'img/logo.png' %}" alt="Luminova Logo" height="100" class="d-inline-block align-text-top me-2">
+                    <img src="{% static 'img/logo.png' %}" alt="Luminova Logo" height="100" width="100" class="d-inline-block align-text-top me-2">
                 </a>
             </div>
 
@@ -13,7 +13,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
 
-            <div class="collapse navbar-collapse" id="navbarContent">
+            <div class="collapse navbar-collapse" id="navbarContent" style="padding-left: 5%;">
                 <ul class="navbar-nav mb-2 mb-lg-0 d-flex justify-content-around w-100">
                     <li class="nav-item"><a class="nav-link text-primary fw-bold" href="{% url 'App_LUMINOVA:compras_lista_oc' %} ">Compras</a></li>
                     <li class="nav-item"><a class="nav-link text-primary fw-bold" href="{% url 'App_LUMINOVA:produccion_principal' %}">Producción</a></li>
