--- a/App_LUMINOVA/templates/ventas/ventas_crear_ov.html
+++ b/App_LUMINOVA/templates/ventas/ventas_crear_ov.html
@@ -97,7 +97,7 @@
                                     <div class="col-md-2 d-flex align-items-end justify-content-center pb-md-2 mb-2">
 
                                         <button type="button" class="btn btn-sm btn-outline-danger remove-new-item-button" title="Eliminar este ítem">
-                                            <i class="bi bi-trash3"></i>
+                                            <i class="bi bi-trash3-fill"></i>
                                         </button>
                                     </div>
                                 </div>
