--- a/App_LUMINOVA/templates/ventas/ventas_crear_ov.html
+++ b/App_LUMINOVA/templates/ventas/ventas_crear_ov.html
@@ -68,7 +68,7 @@
                                                     </div>
                                                 {% else %}
                                                      <button type="button" class="btn btn-sm btn-outline-danger remove-new-item-button" title="Eliminar este ítem nuevo">
-                                                        <i class="bi bi-trash3"></i>
+                                                        <i class="bi bi-trash3-fill"></i>
                                                     </button>
                                                 {% endif %}
                                             {% endif %}
